manifests/dev/homarr/Deployment-homarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: homarr
    app.kubernetes.io/name: homarr
    app.kubernetes.io/version: latest
  name: homarr
  namespace: homarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: homarr
      app.kubernetes.io/name: homarr
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: homarr
        app.kubernetes.io/name: homarr
    spec:
      automountServiceAccountToken: true
      containers:
        - env:
            - name: TZ
              value: Etc/UTC
            - name: DEFAULT_COLOR_SCHEME
              value: dark
            - name: DISABLE_ANALYTICS
              value: "true"
            - name: SECRET_ENCRYPTION_KEY
              valueFrom:
                secretKeyRef:
                  key: SECRET_ENCRYPTION_KEY
                  name: homarr-secret-encryption-key
          image: ghcr.io/homarr-labs/homarr:latest
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 7575
            initialDelaySeconds: 30
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 5
          name: homarr
          ports:
            - containerPort: 7575
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 7575
            initialDelaySeconds: 15
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          volumeMounts:
            - mountPath: /appdata
              name: appdata
      serviceAccountName: default
      volumes:
        - name: appdata
          persistentVolumeClaim:
            claimName: homarr-homarr-appdata
