manifests/dev/homarr/Ingress-homarr.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: homarr
  namespace: homarr
spec:
  ingressClassName: traefik
  rules:
    - host: homarr.home.kronkltd.net
      http:
        paths:
          - backend:
              service:
                name: homarr
                port:
                  name: http
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - homarr.home.kronkltd.net
      secretName: homarr-tls
